<resources>
    <string name="api_key_map">AIzaSyANX_3o4ILDTiUEB0_t5CF5LscEiw5Ie5M</string>
    <string name="api_key_open_weather">4142eb8a00ddd867f9ece825e15804d0</string>
    <string name="app_name">APLICAR</string>
    <string name="title_main_activity">CAR A MI SERVICIO</string>
    <string name="title_activity_main_parques">Su reserva eco turística</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_detalle_parque">Detalle parque</string>
    <string name="title_detalle_reserva">Detalle reserva</string>
    <string name="title_pago_electronico">Pago electrónico</string>
    <string name="title_realizar_reserva">Realizar reserva</string>
    <string name="title_terminos">Términos de uso</string>
    <string name="title_imagenes">Imágenes</string>
    <string name="title_documentos_respuesta">Documentos respuesta</string>
    <string name="title_consultar_tramite">Consultar trámite </string>
    <string name="title_buscar_expediente">Búsqueda de expedientes </string>
    <string name="title_expediente">Expediente </string>
    <string name="title_cambiar_contrasena">Cambiar contraseña </string>
    <string name="title_como_llegar">Cómo llegar </string>
    <string name="title_bank_project">Proyecto de Cofinanciación </string>
    <string name="title_bicicar">BiciCAR </string>
    <string name="title_huella_ambiental">Huella ambiental</string>
    <string name="title_escaner">Escanear QR </string>
    <string name="title_historial_trayectos">Historial trayectos </string>
    <string name="title_asistencia">Registrar asistencia </string>
    <string name="title_rutas">Rutas disponibles </string>
    <string name="title_crear_ruta">Crear ruta </string>
    <string name="maximo_dias">Sólo se permite reservar máximo</string>
    <string name="fecha_inicial">La fecha inicial de la reserva debe ser menor ó igual a</string>
    <string name="fecha_llegada">La fecha de llegada de la reserva debe tener mínimo</string>
    <string name="dias">días</string>
    <string name="dias_antelacion">días de antelación</string>
    <string name="reserva_no_disponible">El servicio solicitado ya se encuentra reservado ó en mantenimiento. Por favor borre el rango seleccionado y elija nuevamente</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="email_incorrecto">Ingrese un email valido</string>
    <string name="error_telefono">El teléfono o celular no es correcto</string>
    <string name="error_campo_obligatorio">El campo es obligatorio</string>
    <string name="error_valor_total_es_mayor">El valor de la consignación no puede ser mayor al valor total de la reserva</string>
    <string name="error_contrasena">Ingrese una contraseña mínimo 4 caracteres</string>
    <string name="error_contrasena2">La contraseña no coincide con la anterior </string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="pre_reserva_crear_cuenta">Para completar la pre reserva debe iniciar sesión ó crear una cuenta de usuario</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="reserva_creada">La reserva ha sido creada. Reserva Nro. </string>
    <string name="reserva_creada2">Por favor reporte el pago en la sección de usuarios en el módulo MIS RESERVAS. Una vez realizada la reserva, cuenta con 24 horas para realizar la consignación (No transferencia) en formato de recaudo por el valor total </string>
    <string name="tramites">Su trámite</string>
    <string name="expedientes">Su expediente</string>
    <string name="error_500">Servicio no disponible </string>
    <string name="header_sin_reservas">Aun no has realizado ninguna reserva</string>
    <string name="header_mis_reservas">listado de las reservas realizadas (Debe presentar el tiquete de la reserva al llegar al parque)</string>
    <string name="enviar_consignacion">Enviar consignación</string>
    <string name="enviar_consignacion_comprobante">ENVIAR CONSIGNACIÓN O COMPROBANTE</string>
    <string name="valor">Valor</string>
    <string name="nro_consignacion">Nro consignación</string>
    <string name="seleccionar_comprobante">Seleccionar comprobante</string>
    <string name="capturar_comprobante">Capturar comprobante</string>
    <string name="fecha_consignacion">Fecha consignación</string>
    <string name="observaciones">Observaciones</string>
    <string name="error_seleccionar_comprobante">Seleccione la imagen del comprobante, o capture una foto del comprobante </string>
    <string name="login_funcionario_car">usted es un funcionario o contratista de la CAR, ingrese con las credenciales de SIDCAR para obtener descuento en la reserva </string>
    <string name="pago_electronico">Pago por transferencia electrónica </string>
    <string name="pago_electronico_des">Para poder realizar el abono debe ingresar al siguiente link del banco Av Villas y selecciona en intención de pago la opción: 108 - APROVECHAMIENTO POR PARQUES </string>
    <string name="envie_consignacion_des"> y envie la consignación o el comprobante del pago electrónico </string>
    <string name="leer_politicas"> Leer políticas de uso </string>
    <string name="acepto_politicas"> Acepto políticas de uso </string>
    <string name="error_fecha_mayor"> La fecha no puede ser mayor al día de hoy </string>
    <string name="editar_mis_datos">Editar mis datos  </string>
    <string name="mensaje_cancelar_reserva">Reserva cancelada, por favor comunicarse con la oficina de servicio al ciudadano SAC, para reprogramar o realizar correspondiente reembolso  </string>
    <string name="grados">°C</string>
    <string name="porciento">%</string>
    <string name="unidad_viento">m/s</string>
    <string name="manana">Mañana</string>
    <string name="ayuda"><u>Ayuda</u></string>
    <string name="ingrese_numero_radicado">INGRESE EL NÚMERO DE RADICADO </string>
    <string name="tipo_tramite">Tipo trámite </string>
    <string name="numero">Número </string>
    <string name="fecha">Fecha </string>
    <string name="remitente">Remitente </string>
    <string name="Asunto">Asunto </string>
    <string name="tema">Tema </string>
    <string name="area_responsable">Área responsable </string>
    <string name="estado_actual">Estado actual </string>
    <string name="cocumentos_respuesta">Documentos rsepuesta </string>
    <string name="tipo_doc">Tipo Documento </string>
    <string name="tipo_respuesta">Tipo respuesta </string>
    <string name="consultar">CONSULTAR </string>
    <string name="no_disponible_publico">Número de documento no disponible para consulta pública! </string>
    <string name="error_404">No se encontró ningún registro </string>
    <string name="error_405">Operación no permitida en el servidor </string>
    <string name="recuperar_contrasena">RECUPERAR CONTRASEÑA</string>
    <string name="recuperar_contrasena_labe">Introduzca la dirección de correo electrónico y el sistema generará y le asignará una nueva contraseña</string>
    <string name="identificarse">Identificarse </string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña? </string>
    <string name="clave_enviada">La nueva contraseña fue enviada a su correo </string>
    <string name="sesion_iniciada">Sesión iniciada:  </string>
    <string name="cambiar_contrasena">CAMBIAR CONTRASEÑA  </string>
    <string name="contrasena_actual">Contraseña actual  </string>
    <string name="nueva_contrasena">Nueva contraseña  </string>
    <string name="actualizar_contrasena">ACTUALIZAR CONTRASEÑA  </string>
    <string name="validar_contrasena">La contraseña debe tener mínimo 4 caracteres  </string>
    <string name="contrasena_no_coincide">Las contraseñas ingresadas no coinciden  </string>
    <string name="contrasen_actualizada">La contraseña fue actualizada correctamente </string>
    <string name="sesion_finalizada">Su sesión a finalizado </string>
    <string name="nro_expediente">Nro. de Expediente </string>
    <string name="nombre_usuario">Nombre de usuario </string>
    <string name="id_usuario">Identificación de usuario </string>
    <string name="ingrese_numero_expediente_valido">Ingrese número de expediente válido </string>
    <string name="ingrese_datos_busqueda">Ingrese algún dato para la búsqueda </string>
    <string name="buscar">BUSCAR </string>
    <string name="informacion_tramite">INFORMACIÓN DEL TRÁMITE </string>
    <string name="expediente_nro">EXPDIENTE NRO: </string>
    <string name="fecha_creacion">Fecha de creación</string>
    <string name="actividad_actual">Actividad actual</string>
    <string name="ultimo_documento">Último documento</string>
    <string name="informacion_adicional">INFORMACIÓN ADICIONAL</string>
    <string name="costo_proyecto">Costo del proyecto</string>
    <string name="cuadernos">Cuadernos</string>
    <string name="anexos">Anexos</string>
    <string name="sin_definir">(sin definir)</string>
    <string name="no_hay_expediente">No se encontró ningún expediente</string>
    <string name="acceso_ubicacion">Esta opcón necesita acceso a tu ubicación. Activa los servicios de geolocalizacion (GPS)</string>
    <string name="configuracion">Configuración</string>
    <string name="cancelar">Cancelar</string>
    <string name="copyright">Copyright CAR Cundinamarca 2017 | App Versión</string>
    <string name="contactanos_a">Para dudas escríbanos a: soporteapps@car.gov.co</string>
    <string name="ayuda_pago">¿Cómo pagar? ver ayuda</string>
    <string name="codigo_proyecto">Código del proyecto </string>
    <string name="codigo">Código </string>
    <string name="titulo">Título </string>
    <string name="descripcion">Descripción </string>
    <string name="no_hay_proyecto_cofinanciacion">No se encontró ningún pryecto</string>
    <string name="title_ubicacion">Ubicación</string>
    <string name="escanearCodigo">Código QR </string>
    <string name="tiempo">Tiempo Min (Opcional) </string>
    <string name="seguro_cerrar_sesion">Seguro desea cerrar sesión </string>
    <string name="huella_ambiental">Huella ambiental </string>
    <string name="historial_trayectos">Historial trayectos </string>
    <string name="permiso_ubicacion">Por favor conceda permiso de ubicación para comenzar el servicio </string>
    <string name="permiso_ubicacion_denegado">No has otorgado permiso de ubicación. Entonces el servicio no puede ser iniciado </string>
    <string name="channel">BiciCAR</string>
    <string name="channel_description"> Notificaciones BiciCAR</string>
    <string name="duracion"> DURACIÓN</string>
    <string name="kilometros"> Kilómetros</string>
    <string name="recordar_contrasena"> Recordar contraseña</string>
    <string name="descripcion_bicicar"> Propuesta educativa ambiental para mitigar los efectos del cambio climático en los municipios priorizados de la jurisdicción CAR</string>
    <string name="titulo_registrar_asistencia"> Seleccione los estudiantes para registrar su asistencia</string>
    <string name="title_activity_seguir_ruta">Ruta BICICAR</string>
    <string name="crear_ruta_descripcion">Si conoces una ruta en bicicleta ingresa sus datos y realiza el recorrido, al finalizar otros usuarios podrán conocer esta ruta y seguir el recorrido </string>
    <string name="title_eventos">Eventos</string>
    <string name="pendiente_publicar">Pendiente publicar</string>
    <string name="publicado">Publicado</string>
    <string name="mensaje_seleccionar_material">Seleccione un material para registrar la cantidad  recogida </string>
    <string name="title_mapa">Mapa</string>
    <string name="title_municipios">Municipios</string>
    <string name="title_guia">Guia</string>
    <string name="title_mas">Más</string>
    <string name="guardar">Guardar</string>
</resources>