<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_mapa"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_mapa"
        app:showAsAction="always"
        android:checked="true"/>

    <item
        android:id="@+id/item_municipio"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_municipios"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_guia"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_guia"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_mas"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/title_mas"
        app:showAsAction="always"/>

</menu>
