<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="car.gov.co.carserviciociudadano.parques.activities.DetalleParqueActivity">

    <item
        android:id="@+id/item_historial"
        android:orderInCategory="100"
        android:title="@string/historial_trayectos"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_huella_ambiental"
        android:orderInCategory="100"
        android:title="@string/huella_ambiental"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_cerrar_sesion"
        android:orderInCategory="100"
        android:title="@string/cerrar_sesion"
        app:showAsAction="never" />
</menu>
