<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cambiar_contrasena"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="car.gov.co.carserviciociudadano.parques.activities.CambiarContrasenaActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_contrasena"
        android:background="@color/gray2"
        android:layout_marginTop="@dimen/margin_10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_13"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLyContrasenaActual"
        android:layout_marginTop="@dimen/margin_10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/txtContrasenaActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena_actual"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/secondaryText"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLyNuevaContrasena"
        android:layout_marginTop="@dimen/margin_10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/txtNuevaContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nueva_contrasena"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/secondaryText"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/txtConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrasena"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/secondaryText"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button android:id="@+id/btnActualizar"
        android:theme="@style/ButtonAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_contrasena"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"/>

    <ProgressBar
        android:id="@+id/progressView"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>
