<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context=".petcar.activities.PublicarMaterialActivity">




    <TextView android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_seleccionar_material"
        android:background="@color/gray2"
        android:layout_marginTop="@dimen/margin_10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_13"
        />

    <RadioGroup android:id="@+id/rgEstados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lblTitulo"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:gravity="center">
        <RadioButton android:id="@+id/rbPendiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pendiente_publicar"
            android:checked="true"/>
        <RadioButton android:id="@+id/rbPublicado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publicado"
            android:layout_marginLeft="@dimen/margin_16dp"/>
    </RadioGroup>

<androidx.recyclerview.widget.RecyclerView
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:layout_marginTop="@dimen/margin_16dp"
    android:layout_below="@id/rgEstados"
    android:layout_above="@id/btnPublicar"
    />




<Button android:id="@+id/btnPublicar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Publicar"
    android:layout_marginLeft="@dimen/margin_16dp"
    android:layout_marginRight="@dimen/margin_16dp"
    android:layout_marginTop="@dimen/margin_10dp"
    android:layout_marginBottom="@dimen/margin_6dp"
    android:background="@drawable/boton_bicicar"
    android:textColor="@color/textLight"
    android:layout_alignParentBottom="true"
    />
</RelativeLayout>
