<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_buscar_expediente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="car.gov.co.carserviciociudadano.consultapublica.activities.BuscarExpedienteActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/lyTramite"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="false"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/background"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        card_view:contentPadding="@dimen/margin_10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 >
                <EditText
                    android:id="@+id/txtNroExpediente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nro_expediente"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/secondaryText"
                    android:maxLength="9"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"  >
                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_usuario"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/secondaryText"
                    android:maxLength="50"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"  >
                <EditText
                    android:id="@+id/txtIdUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_usuario"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/secondaryText"
                    android:maxLength="20"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btnBuscar"
                android:theme="@style/ButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buscar"
                android:layout_marginTop="@dimen/margin_10dp"
               />

            </LinearLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressView"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />
    <android.support.v7.widget.RecyclerView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/margin_10dp"
        />
</LinearLayout>
